# GTE-GroupTheoryEveryting-

./: .gitignore  AlgebraUtils.cpp  CMakeLists.txt  GroupTheory.cpp  GroupTheory.h  LinearAlgebra.cpp  main.cpp
src/: AlgebraUtils.cpp  AlgebraUtils.h  GroupTheory.cpp  GroupTheory.h  GroupTheoryUtils.cpp  GroupTheoryUtils.h  LinearAlgebra.h  main.cpp
